--- a/libraries/ds/tsconfig.json
+++ b/libraries/ds/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "./out",
     "lib": ["dom", "dom.iterable", "esnext"],
     "baseUrl": "src",
-    "module": "ES6"
+    "module": "ES6",
+    "preserveSymlinks": true
   },
   "include": [
     "src/*"
