--- a/libraries/rte/tsconfig.json
+++ b/libraries/rte/tsconfig.json
@@ -5,7 +5,9 @@
     "outDir": "./out",
     "lib": ["dom", "dom.iterable", "esnext"],
     "baseUrl": "src",
-    "module": "ES6"
+    "module": "ES6",
+    "preserveSymlinks": true,
+    "types": ["@stitches/react/types"],
   },
   "include": [
     "src/*"
